welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:17: error: not found: value getHauteurMonde
   	 recule(getHauteurMonde-1)
                ^